--- a/static/style.css
+++ b/static/style.css
@@ -3,16 +3,41 @@
 body {
   font-family: Arial, sans-serif;
   background-color: #f4f6f8;
-  display: flex;
+  /* display: flex; */
   justify-content: center;
   align-items: center;
   height: 100vh;
+  /* margin: 0; */
+}
+
+.pos-f-t{
+  margin-bottom: 10px;
+}
+
+.navbar-nav {
+  list-style-type: none;
+  padding: 0;
   margin: 0;
 }
 
+.nav-item {
+  margin: 2px 0;
+}
+
+.nav-link:hover {
+  text-decoration: underline;
+  color: #00bcd4;
+}
+
+.navbar-brand {
+  font-size: 1.5rem;
+  font-weight: bold;
+}
+
+
 .container {
   background-color: #ffffff;
-  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.5);
   padding: 20px 30px;
   border-radius: 8px;
   max-width: 800px;
@@ -72,6 +97,10 @@ button:hover {
 
 iframe {
   width: 100%;
-  height: 400px;
+  height: 600px;
   border: none;
 }
+
+
+
+
