--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Apartments</title>
     <link rel="stylesheet" href="static/style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+
 </head>
 
 <body>
+    <div class="pos-f-t">
+        <div class="collapse" id="navbarToggleExternalContent">
+            <div class="bg-dark p-4">
+                <h4 class="text-white">Menu</h4>
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/">Search Apartments</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/">Set Preferences</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/">Contact Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-white" href="/">About</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <nav class="navbar navbar-dark bg-dark">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <!-- <a class="navbar-brand" href="/home">My Project</a> -->
+        </nav>
+    </div>
+    
     <div class="container">
         <h1>Search Nearby Apartments</h1>
         <form id="location-form">
@@ -42,6 +76,32 @@
         </div>
     </div>
 
+    <footer class="bg-dark text-white mt-5">
+        <div class="container py-2 bg-dark" >
+            <div class="row">
+                <div class="col-md-12 text-center">
+                    <h5 class="mb-1">Contact Us</h5>
+                    <p class="mb-0">
+                        <i class="fas fa-envelope"></i> info@gmail.com
+                    </p>
+                    <p class="mb-0">
+                        <i class="fas fa-phone"></i> +91 xxxxx00000
+                    </p>
+                    <p class="mb-1">
+                        <i class="fas fa-map-marker-alt"></i> SIT, Tumkur
+                    </p>
+                </div>
+            </div>
+            <hr class="my-1 bg-light">
+            <div class="text-center">
+                <small>&copy; 2024 My Project. All rights reserved.</small>
+            </div>
+        </div>
+    </footer>
+    
+    
+    
+
     <script>
         document.getElementById('location-form').onsubmit = async (e) => {
             e.preventDefault();
@@ -74,7 +134,12 @@
                 console.error(error);
             }
         };
+
+        
     </script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </body>
 
 </html>
